# sst_xlerobot

./: .gitignore  .gitmodules  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  run.sh
recording/: config_recording.yaml
src/sst_xlerbot/: __init__.py
src/sst_xlerbot/inference/: config_inference.yaml  run_xlerobot_inference.py
src/sst_xlerbot/model/: SO101Robot.py  __init__.py
src/sst_xlerbot/quest/: __init__.py
src/sst_xlerbot/recording/: __init__.py  config_recording.yaml  quest_vr_record_dataset.py  quest_vr_record_dataset_v2.py
src/sst_xlerbot/teleop/: __init__.py  quest_vr_xlerobot_controller_no_base.py
src/sst_xlerbot/xlerobot_src/: __init__.py
src/sst_xlerbot/xlerobot_src/model/: SO101Robot_3Link.py
vr_teleop_xlerobot/: README.md  quest_socket_monitor.py  quest_vr_xlerobot_hw_refactored_safe_2link.py
vr_teleop_xlerobot/model/: SO101Robot.py
